add signal support and encapsulate address class

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,3 +13,4 @@ aux_source_directory(${TOP_PROJECT_DIR}/tinynet/src TINYNET)
 add_executable(echosvr echosvr.cpp ${TINYNET})
 add_executable(echocli echocli.cpp ${TINYNET})
 add_executable(httpclient httpclient.cpp ${TINYNET})
+add_executable(sigdemo sigdemo.cpp ${TINYNET})
